swagger added to faculties
