# internal/modules/faculties/handler/faculty_handler.go
@@ -1,6 +1,7 @@
 package handler
 
 import (
+	"log"
 	"strconv"
 
 	"github.com/gofiber/fiber/v2"
@@ -66,14 +67,14 @@ func (h *FacultyHandler) AddFaculty() fiber.Handler {
 // @Summary get-faculty.
 // @Description retrieve faculty using its id.
 // @Tags Faculties
-// @ID add-faculty
+// @ID get-faculty
 // @Accept multipart/form-data
 // @Produce json
-// @Param facultyReq formData facultyModel.DTO true "faculty request for adding new one"
-// @Success 200 {integer} integer 1
+// @Param id path int true "id"
+// @Success 200 {object} facultyModel.Faculty
 // @Failure 400 {object} errlst.RestErr
 // @Failure 500 {object} errlst.RestErr
-// @Router /faculty/create [post]
+// @Router /faculty/{id} [get]
 func (h *FacultyHandler) GetFaculty() fiber.Handler {
 	return func(c *fiber.Ctx) error {
 		ctx, span := otel.Tracer("[FacultyHandler]").Start(c.Context(), "[GetFaculty]")
@@ -97,6 +98,15 @@ func (h *FacultyHandler) GetFaculty() fiber.Handler {
 }
 
 // ListFaculties handler fetches a list of faculties.
+// @Summary List faculties.
+// @Description list faculties, pagination not setted.
+// @Tags Faculties
+// @ID list-faculties
+// @Produce json
+// @Success 200 {object} []facultyModel.Faculty
+// @Failure 400 {object} errlst.RestErr
+// @Failure 500 {object} errlst.RestErr
+// @Router /faculty/get-all [get]
 func (h *FacultyHandler) ListFaculties() fiber.Handler {
 	return func(c *fiber.Ctx) error {
 		ctx, span := otel.Tracer("[FacultyHandler]").Start(c.Context(), "[ListFaculties]")
@@ -114,6 +124,16 @@ func (h *FacultyHandler) ListFaculties() fiber.Handler {
 }
 
 // DeleteFaculty handler deletes a faculty using identified id.
+// @Summary delete-faculty
+// @Description delete faculty using identified id.
+// @Tags Faculties
+// @ID delete-faculty
+// @Produce json
+// @Param id path int true "id"
+// @Success 200 {string} string "successfully deleted faculty"
+// @Failure 400 {object} errlst.RestErr
+// @Failure 500 {object} errlst.RestErr
+// @Router /faculty/{id} [delete]
 func (h *FacultyHandler) DeleteFaculty() fiber.Handler {
 	return func(c *fiber.Ctx) error {
 		ctx, span := otel.Tracer("[FacultyHandler]").Start(c.Context(), "[DeleteFaculty]")
@@ -138,10 +158,23 @@ func (h *FacultyHandler) DeleteFaculty() fiber.Handler {
 }
 
 // UpdateFaculty handler updates a faculty using a new faculty data and identified id.
+// @Summary Update Faculty
+// @Description update faculty fields using identified faculty id
+// @Tags Faculties
+// @ID update-faculty
+// @Accept multipart/form-data
+// @Produce json
+// @Param id path int true "needed faculty id for update"
+// @Param inputReq formData facultyModel.UpdateInputReq true "update faculty request"
+// @Success 200 {string} string "successfully updated faculty ops"
+// @Failure 400 {object} errlst.RestErr
+// @Failure 500 {object} errlst.RestErr
+// @Router /faculty/{id} [put]
 func (h *FacultyHandler) UpdateFaculty() fiber.Handler {
 	return func(c *fiber.Ctx) error {
 		ctx, span := otel.Tracer("[FacultyHandler]").Start(c.Context(), "[UpdateFaculty]")
 		defer span.End()
+		var res string
 
 		facultyID, err := strconv.Atoi(c.Params("id"))
 		if err != nil {
@@ -149,12 +182,18 @@ func (h *FacultyHandler) UpdateFaculty() fiber.Handler {
 		}
 
 		var inputReq facultyModel.UpdateInputReq
-		if err := reqvalidator.ReadRequest(c, &inputReq); err != nil {
-			tracing.EventErrorTracer(span, err, errlst.ErrFieldValidation.Error())
-			return errlst.Response(c, err)
+		if err := inputReq.Validate(); err != nil {
+			res = "update structure has no value"
+			return c.JSON(res)
+		} else {
+			err = reqvalidator.ReadRequest(c, &inputReq)
+			if err != nil {
+				log.Println(err)
+				return errlst.Response(c, err)
+			}
 		}
 
-		res, err := h.service.UpdateFaculty(ctx, facultyID, &inputReq)
+		res, err = h.service.UpdateFaculty(ctx, facultyID, &inputReq)
 		if err != nil {
 			tracing.EventErrorTracer(span, err, errlst.ErrInternalServer.Error())
 			return errlst.Response(c, err)
